--- a/index.html
+++ b/index.html
@@ -59,6 +59,57 @@
         </div>
       </div>
     </section>
+    <section class="blog-section">
+      <div class="blog-content">
+        <div class="two-column-section">
+          <p>Tech Blog</p>
+          <div class="blog-posts">
+            <p class="blogheading">This is Your Brain on Helium</p>
+            <p class="blog-text">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam
+              debitis, deleniti quaerat earum consequatur eveniet esse inventore
+              maxime accusantium ullam aliquid. Iste omnis natus modi voluptatum
+              consectetur consequatur corporis corrupti?
+            </p>
+            <p class="blog-date">June 25, 2025</p>
+            <p class="blogheading">In Search Of Intelligence</p>
+            <p class="blog-text">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam
+              debitis, deleniti quaerat earum consequatur eveniet esse inventore
+              maxime accusantium ullam aliquid. Iste omnis natus modi voluptatum
+              consectetur consequatur corporis corrupti?
+            </p>
+            <p class="blog-date">May 19, 2025</p>
+            <p class="blogheading">Should Public Transit Be Free?</p>
+            <p class="blog-text">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam
+              debitis, deleniti quaerat earum consequatur eveniet esse inventore
+              maxime accusantium ullam aliquid. Iste omnis natus modi voluptatum
+              consectetur consequatur corporis corrupti?
+            </p>
+            <p class="blog-date">March 12, 2025</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="events-section">
+      <div class="events-content">
+        <div class="two-column-section">
+          <p>Speaking Events</p>
+          <div class="events-card">
+            <p class="event-title">NY Economics Forum</p>
+            <p class="event-location">New York, NY</p>
+            <p class="event-date">August 25th 2025, 7:00 pm</p>
+            <p class="event-title">Emerging Tech Meet-Up</p>
+            <p class="event-location">San Francisco, CA</p>
+            <p class="event-date">July 19th 2025, 2:00 pm</p>
+            <p class="event-title">Creative Code Meetup/p></p>
+            <p class="event-location">Denver, CO</p>
+            <p class="event-date">September 29th 2025, 6:00 pm</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <div class="fontawesome">
       <i class="fa-brands fa-xl fa-instagram"></i>
