--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="two-column-section">
           <p>Tech Blog</p>
           <div class="blog-posts">
-            <p class="blogheading">This is Your Brain on Helium</p>
+            <p class="blog-heading">This is Your Brain on Helium</p>
             <p class="blog-text">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam
               debitis, deleniti quaerat earum consequatur eveniet esse inventore
@@ -72,7 +72,7 @@
               consectetur consequatur corporis corrupti?
             </p>
             <p class="blog-date">June 25, 2025</p>
-            <p class="blogheading">In Search Of Intelligence</p>
+            <p class="blog-heading">In Search Of Intelligence</p>
             <p class="blog-text">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam
               debitis, deleniti quaerat earum consequatur eveniet esse inventore
@@ -80,7 +80,7 @@
               consectetur consequatur corporis corrupti?
             </p>
             <p class="blog-date">May 19, 2025</p>
-            <p class="blogheading">Should Public Transit Be Free?</p>
+            <p class="blog-heading">Should Public Transit Be Free?</p>
             <p class="blog-text">
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam
               debitis, deleniti quaerat earum consequatur eveniet esse inventore
@@ -110,11 +110,13 @@
         </div>
       </div>
     </section>
-
-    <div class="fontawesome">
-      <i class="fa-brands fa-xl fa-instagram"></i>
-      <i class="fa-brands fa-xl fa-square-twitter"></i>
-      <i class="fa-brands fa-xl fa-twitter"></i>
-    </div>
+    <footer>
+      <div class="footer-content">
+        <i class="fa-brands fa-3x fa-instagram"></i>
+        <i class="fa-brands fa-3x fa-square-twitter"></i>
+        <i class="fa-brands fa-3x fa-facebook-messenger"></i>
+        <p>Made With ❤️</p>
+      </div>
+    </footer>
   </body>
 </html>
