--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           psychology of greed.
         </h1>
         <div class="two-column-section">
-          <p>My Mission</p>
+          <p class="section-heading">My Mission</p>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde
             architecto blanditiis perferendis quidem cum neque possimus! Harum
@@ -45,7 +45,7 @@
           </p>
         </div>
         <div class="two-column-section">
-          <p>My Specialties</p>
+          <p class="section-heading">My Specialties</p>
           <ul class="skills">
             <li>Public Speaking</li>
             <li>Strategic Plannig</li>
@@ -62,7 +62,7 @@
     <section class="blog-section">
       <div class="blog-content">
         <div class="two-column-section">
-          <p>Tech Blog</p>
+          <p class="section-heading">Tech Blog</p>
           <div class="blog-posts">
             <p class="blog-heading">This is Your Brain on Helium</p>
             <p class="blog-text">
@@ -95,7 +95,7 @@
     <section class="events-section">
       <div class="events-content">
         <div class="two-column-section">
-          <p>Speaking Events</p>
+          <p class="section-heading">Speaking Events</p>
           <div class="events-card">
             <p class="event-title">NY Economics Forum</p>
             <p class="event-location">New York, NY</p>
